<resources>
    <string name="app_name">系统设置</string>
    <string name="sound_switch_to_restore_headrest">副驾乘客已离车，头枕音响模式切换至“%s”</string>
    <string name="sound_switch_to_driver_headrest">检测到副驾乘客上车，头枕音响模式切换至“驾享模式”</string>
    <string name="sound_switch_to_restore_headrest_1">副驾乘客已离车，主驾音响模式切换至“%s”</string>
    <string name="sound_switch_to_driver_headrest_1">检测到副驾乘客上车，主驾音响模式切换至“驾享模式”</string>
    <string name="sound_headrest_audio_mode_off_title">共享模式</string>
    <string name="sound_headrest_audio_mode_drive_title">驾享模式</string>
    <string name="sound_headrest_audio_mode_headrest_title">私享模式</string>
    <string name="dark_brightness_toast">当前处于暗光智能适应激活状态，亮度调节值不会被记忆</string>
    <string name="bluetooth_pairing_request_local">配对请求已发送，请到“%s”确认</string>
    <string name="wlan_popup_error_title">连接失败</string>
    <string name="wlan_popup_error_timeout">连接超时</string>
    <string name="wlan_password_error">密码错误</string>
    <string name="wlan_authentication_fail">认证失败</string>
    <string name="not_found_activity">暂不支持跳转</string>
    <string name="repair_dialog_title">检查模式</string>
    <string name="repair_dialog_msg">当前车辆处于检查模式，确认退出该模式吗？</string>
    <string name="auth_mode_dialog_title">授权模式</string>
    <string name="auth_mode_dialog_msg">授权模式将于 %s 自动退出。</string>
    <string name="auth_mode_dialog_quit">现在退出</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="urgent_power_title">紧急下电开关</string>
    <string name="urgent_power_msg">长按5秒车辆紧急下电</string>
    <string name="sm_device_panel_officialmic">小鹏麦克风</string>
    <string name="determine">确定</string>
    <string name="edit">编辑</string>
    <string name="connect">连接</string>
    <string name="connected">已连接</string>
    <string name="disconnect">断开</string>
    <string name="smaller">精致</string>
    <string name="larger">清晰</string>
    <string name="time_format_24">24时制</string>
    <string name="time_format_12">12时制</string>
    <string name="enter">进入</string>
    <string name="notice">通知</string>
    <string name="nothing">nothing</string>
    <string name="pair">允许</string>
    <string name="refuse">拒绝</string>
    <string name="commit_success">提交成功</string>
    <string name="commit_fail">提交失败</string>
    <string name="complete">完成</string>
    <string name="confirm_open">确认开启</string>
    <string name="btn_on">开启</string>
    <string name="btn_off">关闭</string>
    <string name="title_bluetooth">蓝牙</string>
    <string name="title_co_driver_bluetooth">副驾蓝牙</string>
    <string name="title_back_seat_bluetooth">后排蓝牙</string>
    <string name="title_wifi">无线网络</string>
    <string name="title_sound">声音</string>
    <string name="title_display">显示</string>
    <string name="title_upgrade">系统升级</string>
    <string name="title_laboratory">小鹏实验室</string>
    <string name="title_feedback">用户反馈</string>
    <string name="title_about_system">关于系统</string>
    <string name="title_about">关于</string>
    <string name="title_usb">智能设备</string>
    <string name="title_download">下载管理</string>
    <string name="bluetooth_subtitle_set">蓝牙设置</string>
    <string name="bluetooth_subtitle_bonded">已配对设备</string>
    <string name="bluetooth_subtitle_new">可用新设备</string>
    <string name="bluetooth_subtitle_footer">更多设置</string>
    <string name="bluetooth_none_device_tip">暂无可用新设备，请稍后点击“搜索”重试</string>
    <string name="bluetooth_power">蓝牙开关</string>
    <string name="co_driver_bluetooth_power">副驾蓝牙开关</string>
    <string name="back_seat_driver_bluetooth_power">后排蓝牙开关</string>
    <string name="psn_tts_switch">播报副驾语音</string>
    <string name="bluetooth_visible">开放蓝牙检测</string>
    <string name="bluetooth_visible_tip">开启后对附近所有蓝牙设备可见</string>
    <string name="bluetooth_car_name">蓝牙名称</string>
    <string name="bluetooth_car_name_tip">小鹏汽车</string>
    <string name="bluetooth_profile_unavailable">未启用</string>
    <string name="bluetooth_popup_connect_error_msg">请确定“%s”已打开且在通讯范围内</string>
    <string name="bluetooth_popup_connect_operate_error_tips">连接操作出错，请重试</string>
    <string name="bluetooth_popup_bond_error_msg">无法与“%s”进行配对</string>
    <string name="bluetooth_popup_connected_title">蓝牙已连接</string>
    <string name="bluetooth_popup_disconnect_title">蓝牙未连接</string>
    <string name="bluetooth_popup_ignore_btn">忽略此设备</string>
    <string name="bluetooth_error_device_connecting">设备正在连接中,请稍候</string>
    <string name="bluetooth_error_device_disconnecting">设备正在断开连接中,请稍候</string>
    <string name="bluetooth_pairing_popup_title">蓝牙配对请求</string>
    <string name="bluetooth_pairing_request">\"%s\"想与你进行配对，是否允许？</string>
    <string name="bluetooth_pairing_request_busy">设备正在配对中，请稍候</string>
    <string name="bluetooth_search">搜索</string>
    <string name="bluetooth_phone_tips">请在手机上开启“蓝牙-通话音频”权限或尝试重连蓝牙</string>
    <string name="bluetooth_a2dp_tips">前往“音乐”应用点击蓝牙按钮，启用蓝牙音乐</string>
    <string name="bluetooth_busy_tips">蓝牙设备占用中，请稍后再试</string>
    <string name="wlan_subtitle_set">无线网络设置</string>
    <string name="wlan_power">无线网络开关</string>
    <string name="wlan_subtitle_wifi">选取网络</string>
    <string name="wlan_connected_no_security">不安全的网络 已连接</string>
    <string name="wlan_popup_error_msg">连接"%s"出错</string>
    <string name="wlan_popup_ignore_btn">忽略此网络</string>
    <string name="wlan_signal_strength">信号强度：</string>
    <string name="wlan_security">安 全 性：</string>
    <string name="traffic_subtitle_set">车载热点</string>
    <string name="traffic_power">车载热点开关</string>
    <string name="traffic_power_short">热点开关</string>
    <string name="traffic_name">热点名称</string>
    <string name="traffic_name_tip">小鹏汽车</string>
    <string name="traffic_password">车载热点密码</string>
    <string name="traffic_password_tip">12345678</string>
    <string name="traffic_connected_device">已连接热点的设备</string>
    <string name="traffic_uninstall_app_title">已卸载应用</string>
    <string name="traffic_use_title">流量使用状况</string>
    <string name="traffic_use_month">%s月网络使用情况</string>
    <string name="traffic_permission_title">流量使用权限</string>
    <string name="display_subtitle_brightness">亮度调节</string>
    <string name="display_brightness_center">大屏亮度</string>
    <string name="display_brightness_meter">仪表亮度</string>
    <string name="display_brightness_auto">自动亮度调节</string>
    <string name="display_brightness_auto_main">主驾自动亮度调节</string>
    <string name="display_brightness_auto_psn">副驾自动亮度调节</string>
    <string name="display_brightness_auto_tip">开启后，检测到环境光亮度变化时，自动调节大屏和仪表亮度</string>
    <string name="display_brightness_auto_ciu_tip">开启后，根据车内光线智能调节大屏和仪表亮度</string>
    <string name="display_brightness_auto_low_conf_tip">暗光智能适应</string>
    <string name="display_brightness_auto_low_conf_active_tip">暗光智能适应（已激活）</string>
    <string name="display_brightness_auto_low_conf_tip_main">主驾暗光智能适应</string>
    <string name="display_brightness_auto_low_conf_active_tip_main">主驾暗光智能适应（已激活）</string>
    <string name="display_brightness_auto_low_conf_tip_psn">副驾暗光智能适应</string>
    <string name="display_brightness_auto_low_conf_active_tip_psn">副驾暗光智能适应（已激活）</string>
    <string name="display_brightness_low_config_tips">白天经过暗光环境自动降低大屏和仪表亮度</string>
    <string name="display_brightness_close_psn_screen">副驾驶息屏</string>
    <string name="display_subtitle_facade">外观</string>
    <string name="display_day_night">白天/黑夜模式</string>
    <string name="display_day_night_tip">调整到自动模式后，白天/黑夜模式会智能切换</string>
    <string name="display_day_night_clear">清洁屏幕</string>
    <string name="display_fontsize">字体大小</string>
    <string name="display_time_format">时间制式</string>
    <string name="more">更多</string>
    <string name="display_wait_mode">等人模式</string>
    <string name="display_wait_mode_toast">请在P挡下使用该功能</string>
    <string name="display_wait_mode_tips">等人模式只有车辆处于P挡才能使用，进入等人模式后，车灯和大屏会关闭、仪表亮度会调到最低。触摸屏幕、打开车门、退出P挡、唤醒小P会自动退出等人模式。</string>
    <string name="display_language">语言</string>
    <string name="display_current_language">界面语言: %1$s</string>
    <string name="display_language_desc">大屏、仪表界面将会显示此语言</string>
    <string name="display_choose_language">请选择界面语言</string>
    <string name="confirm_language_title">"更改语言"</string>
    <string name="confirm_language_init_title">"更改语言需要重启大屏系统，请确保车辆处于安全状态。\n是否需要更改语言设置？"</string>
    <string name="display_region">地区</string>
    <string name="display_current_region">当前地区: %1$s</string>
    <string name="display_sample_region">区域格式示例</string>
    <string name="display_choose_region">请选择你的地区</string>
    <string name="display_timezone_auto_title">自动时区: %s</string>
    <string name="display_timezone_auto_subtitle">使⽤运营商⽹络提供的当地时区时间</string>
    <string name="display_timezone_manual_title_unset">选择时区</string>
    <string name="speech_subtitle_set">小P设置</string>
    <string name="speech_awaken">允许语音唤醒</string>
    <string name="speech_awaken_tip">开启后，可通过“你好小 P”唤醒 AI 助手</string>
    <string name="speech_quick">允许快捷操作</string>
    <string name="speech_quick_tip">开启后，无需唤醒，直接说出指令即可实现部分快捷操作</string>
    <string name="speech_oneshot">允许 Oneshot</string>
    <string name="speech_oneshot_tip">开启后，支持“你好小 P”+指令 连着说，如“你好小 P，打开空调</string>
    <string name="speech_interrupt">打断语音播报</string>
    <string name="speech_interrupt_tip">开启后，可以在多轮对话的过程中打断语音播报</string>
    <string name="speech_hello">小P问候</string>
    <string name="speech_hello_tip">开启后，每次唤醒小P主页将收到小P的声音问候</string>
    <string name="laboratory_coming_soon">敬请期待</string>
    <string name="laboratory_no_function_tips">暂无实验功能开放</string>
    <string name="laboratory_app_used_limit">三方应用使用限制</string>
    <string name="laboratory_app_used_limit_tips">关闭后，在行驶中使用三方应用会有安全隐患，请谨慎操作</string>
    <string name="laboratory_low_speed_alarm_sound">低速模拟音音量</string>
    <string name="laboratory_low_speed_alarm_sound_tips">音量调节永久有效，调低后存在车外提示风险，请谨慎操作</string>
    <string name="low_speed_analog_cue_tone">低速模拟音</string>
    <string name="low_speed_tips2">此处设置永久有效，关闭后存在车外提示风险，请谨慎操作</string>
    <string name="laboratory_remote_control_key">钥匙遥控泊车</string>
    <string name="laboratory_remote_control_key_tips">开启后，使用钥匙控制泊入/泊出</string>
    <string name="laboratory_remote_control_advanced">增强版遥控泊车</string>
    <string name="laboratory_remote_control_advanced_tips">开启后，可使用手机或钥匙激活记忆泊车的末段里程</string>
    <string name="laboratory_car_call_advanced">增强版车辆召唤</string>
    <string name="laboratory_car_call_advanced_tips">开启后，可基于设定路线在视距内召唤车辆</string>
    <string name="laboratory_auto_power_off">自动下电</string>
    <string name="laboratory_auto_power_off_tips">开启后，主驾无人时1小时内若无任何操作会自动下电</string>
    <string name="laboratory_induction_lock">靠近自动解锁与离开自动闭锁</string>
    <string name="laboratory_induction_lock_tips">开启后，所有车门关闭时，携智能蓝牙钥匙靠近自动解锁、远离自动闭锁</string>
    <string name="laboratory_remote_control">钥匙遥控泊车</string>
    <string name="laboratory_remote_control_tips">开启后，使用钥匙控制泊入/泊出</string>
    <string name="laboratory_soldier_tips">启用后，车辆下电期间若发生剐蹭会发送通知到手机</string>
    <string name="laboratory_soldier_level">哨兵模式灵敏度</string>
    <string name="laboratory_soldier_camera_level">录制视频到相册</string>
    <string name="laboratory_soldier_camera_tips">开启后，发生剐蹭时全景摄像头会录制视频存到中控屏相册内</string>
    <string name="laboratory_inductive_unlocking_title">感应式解闭锁</string>
    <string name="laboratory_near_unlocking_title">靠近自动解锁</string>
    <string name="laboratory_near_unlocking_tips">开启后，所有车门关闭且主副驾无人时，携钥匙（手机和NFC卡片钥匙除外）靠近自动解锁</string>
    <string name="laboratory_leave_locking_title">离开自动闭锁</string>
    <string name="laboratory_leave_locking_tips">开启后，所有车门关闭且主副驾无人时，携钥匙（手机和NFC卡片钥匙除外）远离自动闭锁</string>
    <string name="laboratory_tips_security">安全相关</string>
    <string name="laboratory_tips_text">小鹏实验室使用协议</string>
    <string name="laboratory_tts_broadcast_type">辅助驾驶播报形式</string>
    <string name="laboratory_tts_broadcast_tips">选择辅助驾驶的安全提醒以详细还是简洁的方式播报</string>
    <string name="about_restore">恢复出厂设置</string>
    <string name="privacy_protocol_screen_title">车载大屏隐私协议</string>
    <string name="privacy_protocol_map_service">地图数据授权</string>
    <string name="privacy_protocol_voice_service">语音数据授权</string>
</resources>