<?xml version="1.0" encoding="utf-8"?>
<com.xiaopeng.xui.widget.XLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.xiaopeng.xui.widget.XGroupHeader
        style="@style/XGroupHeader"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/padding_large"
        app:group_header_text="@string/display_language" />

    <com.xiaopeng.xui.widget.XListTwo
        android:id="@+id/display_current_language"
        style="@style/XList.Two"
        android:layout_marginTop="@dimen/padding_normal"
        app:list_two_left="@layout/x_list_action_button"
        app:list_two_text="@string/display_sample_region"
        app:list_two_text_sub="@string/display_language_desc" />

</com.xiaopeng.xui.widget.XLinearLayout>

